--- a/main.html
+++ b/main.html
@@ -4,10 +4,27 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	    <style>
+      #yellow {
+        border: 1px solid green;
+        background-color: yellow;
+      }
+      #red {
+        border: 1px solid black;
+        background-color: red;
+      }
+      #green {
+        border: 1px solid yellow;
+        background-color: green;
+      }
+    </style>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+    <p id="yellow">Paragraph-1</p>
+    <p id="red">Paragraph-2</p>
+    <p id="green">Paragraph-3</p>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
